--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,9 @@
 @tailwind base;
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 70px;
+}
+
 @tailwind components;
 @tailwind utilities;
 
